--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </div>
     </div>
 
-    <script type="text/javascript" src="covid.js">
+    <script type="text/javascript" src="index.js.js">
     </script>
   </body>
 </html>
