--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </form>
 </div>
   <div class="container">
-    <div class = "moderate"><h2 id="o">Moderate impact</h2><hr>
+    <div class = "moderate"><h2 id="o">Moderate impact results</h2><hr>
             <div class="">
               <h3 id="period"></h3><p>Period Type</p>
             </div><hr>
@@ -61,7 +61,7 @@
               </div>
 </div>
     <div class="impact">
-              <h2 id="o">Severe impacts</h2><h1 id="severeImpact"></h1><hr>
+              <h2 id="o">Severe impacts results</h2><h1 id="severeImpact"></h1><hr>
               <div class="">
                 <h3 id="severeperiod"></h3><p>Period Type</p>
               </div><hr>
