--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Covide19-estmator</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="one">
@@ -95,7 +95,7 @@
     </div>
     </div>
 
-    <script type="text/javascript" src="index.js.js">
+    <script type="text/javascript" src="covid.js">
     </script>
   </body>
 </html>
